@@ -1,5 +1,9 @@
 2011-01-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
+	* testsuite/testCombination.cpp: Fix BeliefSet instantiation.
+
+	* src/dmcs/BeliefCombination.cpp: Add more sanity checks.
+
 	* include/generator/QueryPlanWriter.h: Include QueryPlan.h.
 
 	* include/dmcs/Debug.h (printBeliefStateNicely): Move to Debug.
